hard-gists/492858/run.log
=== Docker Run Log for 492858 ===
Started at: Mi 29. Okt 15:03:49 CET 2025

[2025-10-29 15:03:49] START: Running container for 492858
[2025-10-29 15:03:49] SUCCESS: Container 4b5582659ef1f39b38eda6b97bab325b2cb6ab84771df887b052c927611027bd started for 492858
=== Container logs for 492858 ===
  File "/snippet.py", line 55
    print self.n
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 492858 ===
[2025-10-29 15:03:52] INFO: Container 4b5582659ef1f39b38eda6b97bab325b2cb6ab84771df887b052c927611027bd has stopped
